Fix display of nav section list button on safari.

--- a/styles/style.css
+++ b/styles/style.css
@@ -316,6 +316,10 @@
         transition: transform 1s; 
     }
 
+    .nav-menu-chapter-container button svg {
+        flex: 1;
+    }
+
     .nav-menu-chapter h1 {
         padding: 0.75em 0 0.75em 0.75em;
     }
